--- a/index.html
+++ b/index.html
@@ -6,23 +6,43 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Josefin+Sans&display=swap" rel="stylesheet">
   <title>Andrew's mobile first responsive layout</title>
 </head>
 <body>
   <div>
-    <header>
-      <h1>Andrew Reynolds</h1>
-      <nav>
-        <ul>
-          <li><a href="#">home</a></li>
-          <li><a href="#">portfolio</a></li>
-          <li><a href="#">contact</a></li>
+    <div class="wrap">
+      <header>
+        <div class="container">
+          <nav class="main-nav">
+            <h1 class="name">Andrew Reynolds</h1>
+            <ul class="capital">
+              <li><a href="#">home</a></li>
+              <li><a href="#">portfolio</a></li>
+              <li><a href="#">contact</a></li>
+            </ul>
+          </nav>
+        </div>  
+      </header>
+      <div></div>
+      <main></main>
+    </div>
+    <footer>
+      <h2 class="capital">contact</h2>
+      <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you&#33</p>
+      <ul>
+        <li>Phone&#58;  &#43;1 &#40;111&#41; 555 &#45; 1234 </li>
+        <li>Email&#58; <a href="mailto:email@yoursite.com?subject=Hello%20Again">email@yoursite.com</a></li>
+      </ul>
+    </footer>
+    <div class="container">
+      <nav class="base-nav clearfix">
+        <h1 class="base-name">Andrew Reynolds</h1>
+        <ul class="base-list capital">
+          <li><a href="#">back to top</a></li>
         </ul>
-
       </nav>
-    </header>
-    <main></main>
-    <footer></footer>
+    </div>
   </div>
 </body>
 </html>
