responsive footer with base nav change.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,24 @@
               <li><a href="#">contact</a></li>
             </ul>
           </nav>
+          <figure class="profile-img">
+            <img src="images/responsive-layout-profile.png" alt="profile photo image">
+            <p>Hello reader, I'm currently working towards completing my front-end developer tech degree through TeamTreeHouse. This project reflects the recent lessons on responsive web design and css. Please enjoy!</p>
+          </figure>
         </div>  
       </header>
       <div></div>
-      <main></main>
+      <main>
+        <h3>Portfolio</h3>
+        <section>
+          <figure>
+            <img src="images/portfolio-1.png" alt="portfolio image 1">
+            <h2>Marketing Page</h2>
+            <p>This project shows the font page of a marketing website meant for a specific business I'm interested in.</p>
+          </figure>
+         
+        </section>
+      </main>
     </div>
     <footer>
       <h2 class="capital">contact</h2>
@@ -38,8 +52,13 @@
     <div class="container">
       <nav class="base-nav clearfix">
         <h1 class="base-name">Andrew Reynolds</h1>
-        <ul class="base-list capital">
+        <ul class="base-list1 capital">
           <li><a href="#">back to top</a></li>
+        </ul>
+        <ul class="base-list2 capital">
+          <li><a href="#">home</a></li>
+          <li><a href="#">portfolio</a></li>
+          <li><a href="#">contact</a></li>
         </ul>
       </nav>
     </div>
