--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrap">
       <header>
         <div class="container">
-          <nav class="main-nav">
+          <nav class="main-nav clearfix">
             <h1 class="name">Andrew Reynolds</h1>
             <ul class="capital">
               <li><a href="#">home</a></li>
@@ -31,45 +31,47 @@
       <div></div>
       <main id="portfolio" class="container">
         <h3>Portfolio</h3>
-        <section class="marketing-page">
+        <section class="marketing-page col">
           <figure>
             <img src="images/portfolio-1.png" alt="portfolio image of marketing page">
             <h2>Marketing Page</h2>
             <p>This project shows the font page of a marketing website meant for a specific business I'm interested in.</p>
           </figure>
         </section>
-        <section class="search-page">
+        <section class="search-page col">
           <figure>
             <img src="images/portfolio-2.png" alt="portfolio image of search page">
             <h2>Search Page</h2>
             <p>This project searches through a specific database to find information that the user is trying to look up.</p>
           </figure>
         </section>
-        <section class="travel-app">
+        <section class="travel-app col">
           <figure>
             <img src="images/portfolio-3.png" alt="portfolio image of travel app">
             <h2>Travel App</h2>
             <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
           </figure>
         </section>
-        <section class="map">
+        <section class="map col">
           <figure>
             <img src="images/portfolio-4.png" alt="portfolio image of map of favorite spots">
             <h2>Map of Favorite Spots</h2>
             <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
           </figure>
         </section>
-        <section class="photo-gallery">
+        <section class="photo-gallery col">
           <figure>
             <img src="images/portfolio-5.png" alt="photo of photo gallery page">
             <h2>Photo Gallery</h2>
             <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos</p>
           </figure>
         </section>
-        <section class="calculator">
-          <img src="images/portfolio-6.png" alt="calculator web app photo">
-          <h2>Calculator</h2>
-          <p>Someone can enter in the numbers they want, and press teh big blue button and get the result.</p>
+        <section class="calculator col">
+          <figure>
+            <img src="images/portfolio-6.png" alt="calculator web app photo">
+            <h2>Calculator</h2>
+            <p>Someone can enter in the numbers they want, and press teh big blue button and get the result.</p>
+          </figure>
         </section>
       </main>
     </div>
