--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
     <footer class="container">
       <h2 class="capital" id="contact">contact</h2>
-      <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you&#33</p>
+      <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you&#33;</p>
       <ul>
         <li>Phone&#58;  &#43;1 &#40;111&#41; 555 &#45; 1234 </li>
         <li>Email&#58; <a href="mailto:email@yoursite.com?subject=Hello%20Again">email@yoursite.com</a></li>
