--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
       <nav class="base-nav clearfix">
         <h1 class="base-name">Andrew Reynolds</h1>
         <ul class="base-list1 capital">
-          <li><a href="#">back to top</a></li>
+          <li><a href="index.html">back to top</a></li>
         </ul>
         <ul class="base-list2 capital">
-          <li><a href="#">home</a></li>
+          <li><a href="index.html">home</a></li>
           <li><a href="#portfolio">portfolio</a></li>
           <li><a href="#contact">contact</a></li>
         </ul>
