add collaboration form

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
               <li><a href="#">home</a></li>
               <li><a href="#portfolio">portfolio</a></li>
               <li><a href="#contact">contact</a></li>
+              <li><a href=#collaboration></a></li>
             </ul>
           </nav>
           <figure class="profile-img clearfix">
@@ -73,6 +74,25 @@
             <p>Someone can enter in the numbers they want, and press teh big blue button and get the result.</p>
           </figure>
         </section>
+        <article id="collaboration">
+          <h2>Interested in Collabarating</h2>
+          <p>I really enjoy working on great ideas with people. If you have a new project and think I could be a good fit for the team, please fill in the form and submit to me.</p>
+          <form>
+            <fieldset>
+              <legend>Contact</legend>
+              <label for="name">Name:</label>
+              <input type="text" id="name" name="user_name">
+              <label for="email">Email:</label>
+              <input type="text" id="email" name="user_name">
+            </fieldset>
+            <fieldset>
+              <legend>Project idea</legend>
+              <label for="idea">Project Idea:</label>
+              <textarea id="idea" name="user_idea"></textarea>
+            </fieldset>
+            <button type="submit">Submit</button>
+          </form>
+        </article>
       </main>
     </div>
     <footer class="container">
