--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <li><a href="#">home</a></li>
               <li><a href="#portfolio">portfolio</a></li>
               <li><a href="#contact">contact</a></li>
-              <li><a href=#collaboration></a></li>
+              <li><a href=#collaboration>collaboration</a></li>
             </ul>
           </nav>
           <figure class="profile-img clearfix">
@@ -86,7 +86,6 @@
               <input type="text" id="email" name="user_name">
             </fieldset>
             <fieldset>
-              <legend>Project idea</legend>
               <label for="idea">Project Idea:</label>
               <textarea id="idea" name="user_idea"></textarea>
             </fieldset>
