--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
           <li><a href="index.html">home</a></li>
           <li><a href="#portfolio">portfolio</a></li>
           <li><a href="#contact">contact</a></li>
+          <li><a href=#collaboration>collaboration</a></li>
         </ul>
       </nav>
     </div>
